# glaze_vs_protobuf

./: .gitignore  CMakeLists.txt  README.md  bootstrap_d.bat  bootstrap_r.bat  conanfile.txt  main.cpp  requirements.txt
proto/: message.proto
